<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".mainmenu.MainMenuActivity">

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="6dp"
        android:background="@drawable/selector_clear_btn"
        android:padding="5dp"
        android:src="@drawable/ic_settings"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bcbcbc"
            android:text="v"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#bcbcbc"
            android:text="@string/version_num"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/new_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/new_game"
            android:textColor="@android:color/white"/>

        <Spinner
            android:id="@+id/game_template_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/game_round_dimensions"/>

    </LinearLayout>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/play_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/layout_saved_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/play_layout"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/round_rectangle_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/round_rectangle_bg"
                android:text="@string/saved_game"
                android:textSize="6pt"/>

            <ImageButton
                android:id="@+id/clear_all_btn"
                android:layout_width="@dimen/clear_btn_size"
                android:layout_height="@dimen/clear_btn_size"
                android:layout_alignParentRight="true"
                android:layout_margin="2dp"
                android:background="@drawable/selector_clear_btn"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_action_name"/>

        </RelativeLayout>

        <ListView
            android:id="@+id/game_round_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_rectangle_bg"
            tools:listitem="@layout/item_game_data"/>

    </LinearLayout>

</RelativeLayout>
