<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/puzzle_solved"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/center_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline">

        <LinearLayout
            android:id="@+id/inner_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_64_dp"
                android:layout_height="@dimen/_64_dp"
                android:layout_margin="@dimen/_8_dp"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/level"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_tada" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="Level 1"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24_dp"
            android:layout_marginEnd="@dimen/_24_dp"
            android:layout_marginTop="@dimen/_24_dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_4_dp"
            android:text="@string/finish_text"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/level_progress_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />


        <TextView
            android:id="@+id/level_progress_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24_dp"
            android:layout_marginTop="@dimen/_8_dp"
            android:layout_marginEnd="@dimen/_24_dp"
            android:gravity="center"
            android:text="1/5"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message" />

        <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="24dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="@dimen/_4_dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level_progress_text"
            app:rcBackgroundColor="#0A000000"
            app:rcBackgroundPadding="4dp"
            app:rcMax="100"
            app:rcProgress="50"
            app:rcProgressColors="@array/sample_progress_gradient"
            app:rcRadius="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.425" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_menu"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:insetTop="0dp"
        android:textAllCaps="false"
        android:insetBottom="0dp"
        android:text="@string/main_menu"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20_sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/positive_button"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAllCaps="false"
        android:text="@string/next_puzzle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20_sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_menu"
        app:layout_constraintTop_toBottomOf="@+id/bottom_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />
</androidx.constraintlayout.widget.ConstraintLayout>